# ADK-DeepResearch

./: .gitignore  README.md  pyproject.toml
app/: .env.sample  main.py
app/deep_research/: agent.py  prompt.py
